Fix overlapping elements in header and main content

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,7 +17,7 @@ body {
   font-size: var(--fontsize-body-m);
   color: var(--color-black-90);
   line-height: var(--lineheight-l);
-  height: 100vh;
+  height: auto;
 }
 
 #root {
